--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Nicolás Arellano</title>
-    <link rel="stylesheet" href="assets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/style.css">
 
 </head>
 
-<body class="color-white">
+<body class="bg-info bg-gradient">
 
     <h1 class="titulo_principal bg-dark">NICOLAS ARELLANO</h1>
     <div class="tabla_one row ">
 
-        <div class="educacion col-6 efecto">
-            <h2>Educación</h2>
+        <div class="educacion col-8">
+            <h2 class="educacion-titulo text-center">Educación</h2>
             <ul>
                 <li>Bootcamp Full Stack Javascript, Academia Desafio Latam (en curso), Junio 2023.</li>
                 <li>Soporte Vital Cardiovascular Avanzado (ACLS), Mutual Capacitaciones, Agosto-Septiembre 2022.</li>
@@ -37,64 +39,82 @@
                     2014-2018.</li>
             </ul>
         </div>
-        <div class="datos_y_redes col-6 efecto">
-            <img class="h-75 mt-3 border border-dark" src="img/foto_nico.jpg" width="200px"
+        <div class="datos_y_redes col-4">
+            <img class="mt-3 border border-dark" src="img/foto_nico.jpg" width="180px" height="250px"
                 alt="foto_de_nicolas_arellano" />
             <div>
                 <h2>Datos personales/ redes sociales</H2>
                 <P>Rut: 19.194.631-6</P>
                 <p>Correo: kine.arellano.d@gmail.com</p>
                 <p>Dirección: Duble almeyda #3274 depto 203, Ñuñoa, Santiago.</p>
-                <a href="portafolio.html">Portafolio TI</a><br><br> <a
+                <a href="portafolio.html">Portafolio TI</a><br><a
                     href="https://www.linkedin.com/in/nicol%C3%A1s-arellano-dur%C3%A1n-148283142/">Linkedin</a>
             </div>
         </div>
     </div>
-    <div class="trayectoria">
-        <h2 class="text-center">Trayectoria Laboral</h2>
-        <ul class="mb-3">
-            <li>Abril 2020 (ACTUAL)<br>Kinesiólogo UPC Hospital del Salvador, Providencia, Santiago,
-                Chile. </li>
-            <li>Diciembre 2019 - Abril 2020<br>Kinesiólogo ASOKINE, Santiago, Chile.</li>
-            <li>Noviembre 2019 - Febrero 2020<br>Reemplazo UPC Hospital Pitrufquén, Araucanía, Chile.</li>
-            <li>Julio - Agosto 2019<br>Pasante UPC Adulto 84 hrs, Clínica INDISA, Providencia, Santiago de Chile.</li>
-            <li>Enero 2019<br>Pasante curso ERA 16 hrs, CESFAM SANTA ANSELMA - CESFAM SAN JOAQUIN, Santiago de Chile.
-            </li>
-            <li>Septiembre - Noviembre 2018<br>Practicante profesional de Kinesiología 320 hrs, Hospital Makewe.</li>
-            <li>Agosto - Septiembre 2018<br>Practicante profesional de Kinesiología 320 hrs, CESFAM PUEBLO NUEVO,
-                Temuco.</li>
-            <li>Junio - Agosto 2018<br>Practicante Profesional de Kinesiología 320 hrs. INAREPS (Instituto Nacional de
-                Rehabilitación Psicofísica del Sur), Mar Del Plata, Argentina.</li>
-            <li>Marzo - Mayo 2018<br>Practicante Profesional de Kinesiología 320 hrs, Hospital Abraham Godoy Peña,
-                Lautaro.</li>
-            <li>Abril 2015 - Noviembre 2017<br>Mentor y Ayudante en ciencias básicas en Salud, Anatomía General-Anatomía
-                y Cinesiología, en la carrera de Kinesiología, Universidad Autónoma de Chile, Temuco.</li>
-        </ul>
+
+
+    <div class="row">
+        <div class="trayectoria col-8">
+            <h2 class="text-center">Trayectoria Laboral</h2>
+            <ul class="mb-3">
+                <li>Abril 2020 (ACTUAL)<br>Kinesiólogo UPC Hospital del Salvador, Providencia, Santiago,
+                    Chile. </li>
+                <li>Diciembre 2019 - Abril 2020<br>Kinesiólogo ASOKINE, Santiago, Chile.</li>
+                <li>Noviembre 2019 - Febrero 2020<br>Reemplazo UPC Hospital Pitrufquén, Araucanía, Chile.</li>
+                <li>Julio - Agosto 2019<br>Pasante UPC Adulto 84 hrs, Clínica INDISA, Providencia, Santiago de Chile.
+                </li>
+                <li>Enero 2019<br>Pasante curso ERA 16 hrs, CESFAM SANTA ANSELMA - CESFAM SAN JOAQUIN, Santiago de
+                    Chile.
+                </li>
+                <li>Septiembre - Noviembre 2018<br>Practicante profesional de Kinesiología 320 hrs, Hospital Makewe.
+                </li>
+                <li>Agosto - Septiembre 2018<br>Practicante profesional de Kinesiología 320 hrs, CESFAM PUEBLO NUEVO,
+                    Temuco.</li>
+                <li>Junio - Agosto 2018<br>Practicante Profesional de Kinesiología 320 hrs. INAREPS (Instituto Nacional
+                    de
+                    Rehabilitación Psicofísica del Sur), Mar Del Plata, Argentina.</li>
+                <li>Marzo - Mayo 2018<br>Practicante Profesional de Kinesiología 320 hrs, Hospital Abraham Godoy Peña,
+                    Lautaro.</li>
+                <li>Abril 2015 - Noviembre 2017<br>Mentor y Ayudante en ciencias básicas en Salud, Anatomía
+                    General-Anatomía
+                    y Cinesiología, en la carrera de Kinesiología, Universidad Autónoma de Chile, Temuco.</li>
+            </ul>
+        </div>
+        <div class="ap-ac-ho col-4">
+            <h3 class="aptitudes text-center">Aptitudes</h3>
+            <ul>
+                <li>Soporte ventilatorio y de oxigenación avanzado invasivo/ no invasivo</li>
+                <li>Rehabilitación neuromusuclar paciente crítico</li>
+                <li>Manejo avanzado disincronías paciente-ventilador</li>
+                <li>Manejo clínico de vía aerea artificial</li>
+                <li>Manejo clínico y apoyo destete ventilatorio/ taqueostomía percutánea/ fibrobroncoscopía</li>
+            </ul>
+            <h3 class="actitudes text-center">Actitudes</h3>
+            <ul>
+                <li>Proactivo, liderazgo, empático, responsable, vocación de servicio.</li>
+            </ul>
+            <h3 class="hobbies text-center">Hobbies</h3>
+            <ul>
+                <li>Deportes, Tecnologías del entretenimiento.</li>
+            </ul>
+        </div>
+
+        <div class="footer">
+        <h3 class="footer-titulo text-center">Referencias</h3>
+        
+            <ol>
+                <li>Carlos Ibañez, Jefe Socialmeds Hospital Salvador, Santiago, 977680082, ibanezlabra@gmail.com.
+                </li>
+                <li>Jaime Ubilla, Director de la carrera de Kinesiología, Universidad Autónoma de Chile,Temuco,
+                    452895136.
+                    jaime.ubilla@uautonoma.cl</li>
+                <li>René Rivas, Kinesiólogo Sala IRA, CESFAM PUEBLO NUEVO, Temuco, 56998843107. renerivas@gmail.com
+                </li>
+            </ol>
+        </div>
     </div>
-    <div>
-        <h3>Aptitudes</h3>
-        <ul>
-            <li>Soporte ventilatorio y de oxigenación avanzado invasivo/ no invasivo</li>
-            <li>Rehabilitación neuromusuclar paciente crítico</li>
-            <li>Manejo avanzado disincronías paciente-ventilador</li>
-            <li>Manejo clínico de vía aerea artificial</li>
-            <li>Manejo clínico y apoyo destete ventilatorio/ taqueostomía percutánea/ fibrobroncoscopía</li>
-        </ul>
-        <h3>Actitudes</h3>
-        <p>Proactivo, liderazgo, empático, responsable, vocación de servicio.</p>
-        <h3>Hobbies</h3>
-        <p>Deportes,Tecnologías del entretenimiento.</p>
-        <h3>Referencias</h3>
-        <ol>
-            <li>Carlos Ibañez, Jefe Socialmeds Hospital Salvador, Santiago, 977680082, ibanezlabra@gmail.com.</li>
-            <li>Jaime Ubilla, Director de la carrera de Kinesiología, Universidad Autónoma de Chile,Temuco, 452895136.
-                jaime.ubilla@uautonoma.cl</li>
-            <li>René Rivas, Kinesiólogo Sala IRA, CESFAM PUEBLO NUEVO, Temuco, 56998843107. renerivas@gmail.com</li>
-        </ol>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
