color definitivo y footer con tex-center

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body class="bg-info bg-gradient">
+<body>
 
     <h1 class="titulo_principal bg-dark">NICOLAS ARELLANO</h1>
     <div class="tabla_one row ">
@@ -100,10 +100,10 @@
             </ul>
         </div>
 
-        <div class="footer">
-        <h3 class="footer-titulo text-center">Referencias</h3>
+        <div class="footer text-center">
+        <h3 class="footer-titulo">Referencias</h3>
         
-            <ol>
+            <ul>
                 <li>Carlos Ibañez, Jefe Socialmeds Hospital Salvador, Santiago, 977680082, ibanezlabra@gmail.com.
                 </li>
                 <li>Jaime Ubilla, Director de la carrera de Kinesiología, Universidad Autónoma de Chile,Temuco,
@@ -111,7 +111,7 @@
                     jaime.ubilla@uautonoma.cl</li>
                 <li>René Rivas, Kinesiólogo Sala IRA, CESFAM PUEBLO NUEVO, Temuco, 56998843107. renerivas@gmail.com
                 </li>
-            </ol>
+            </ul>
         </div>
     </div>
 
