color y titulos ok, falta cambiar tipo de letra, responsivo y portafolio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <h1 class="titulo_principal bg-dark">NICOLAS ARELLANO</h1>
-    <div class="tabla_one row ">
+    <div class="row ">
 
         <div class="educacion col-8">
             <h2 class="educacion-titulo text-center">Educación</h2>
@@ -43,7 +43,7 @@
             <img class="mt-3 border border-dark" src="img/foto_nico.jpg" width="180px" height="250px"
                 alt="foto_de_nicolas_arellano" />
             <div>
-                <h2>Datos personales/ redes sociales</H2>
+                <h2 class="datos_redes_titulo">Datos & redes</H2>
                 <P>Rut: 19.194.631-6</P>
                 <p>Correo: kine.arellano.d@gmail.com</p>
                 <p>Dirección: Duble almeyda #3274 depto 203, Ñuñoa, Santiago.</p>
@@ -56,7 +56,7 @@
 
     <div class="row">
         <div class="trayectoria col-8">
-            <h2 class="text-center">Trayectoria Laboral</h2>
+            <h2 class="trayectoria_titulo text-center">Trayectoria Laboral</h2>
             <ul class="mb-3">
                 <li>Abril 2020 (ACTUAL)<br>Kinesiólogo UPC Hospital del Salvador, Providencia, Santiago,
                     Chile. </li>
@@ -82,7 +82,7 @@
             </ul>
         </div>
         <div class="ap-ac-ho col-4">
-            <h3 class="aptitudes text-center">Aptitudes</h3>
+            <h3 class="aptitudes_titulo text-center">Aptitudes</h3>
             <ul>
                 <li>Soporte ventilatorio y de oxigenación avanzado invasivo/ no invasivo</li>
                 <li>Rehabilitación neuromusuclar paciente crítico</li>
@@ -90,19 +90,19 @@
                 <li>Manejo clínico de vía aerea artificial</li>
                 <li>Manejo clínico y apoyo destete ventilatorio/ taqueostomía percutánea/ fibrobroncoscopía</li>
             </ul>
-            <h3 class="actitudes text-center">Actitudes</h3>
+            <h3 class="actitudes_titulo text-center">Actitudes</h3>
             <ul>
                 <li>Proactivo, liderazgo, empático, responsable, vocación de servicio.</li>
             </ul>
-            <h3 class="hobbies text-center">Hobbies</h3>
+            <h3 class="hobbies_titulo text-center">Hobbies</h3>
             <ul>
                 <li>Deportes, Tecnologías del entretenimiento.</li>
             </ul>
         </div>
 
         <div class="footer text-center">
-        <h3 class="footer-titulo">Referencias</h3>
-        
+            <h3 class="footer_titulo">Referencias</h3>
+
             <ul>
                 <li>Carlos Ibañez, Jefe Socialmeds Hospital Salvador, Santiago, 977680082, ibanezlabra@gmail.com.
                 </li>
